# happy-alex-example

./: CHANGELOG.md  LICENSE  README.md  expr.txt  happy-alex-example.cabal
app/: Main.hs
src/: AST.hs  Errors.hs  Lexer.x  Monad.hs  Parser.y  SrcLoc.hs
